--- a/.github/workflows/deploy-to-cloud-run.yml
+++ b/.github/workflows/deploy-to-cloud-run.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches:
       - main
-      - feature/historical-data-customer
+      - feature/audio-fix
 
 jobs:
   build-push-deploy:
