--- a/.github/workflows/terraform-setup.yml
+++ b/.github/workflows/terraform-setup.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
       - main
-      - feature/historical-data-customer
+      - feature/audio-fix
 
 jobs:
   terraform:
